# bdb

./: .clang-format  CMakeLists.txt  LICENSE  README.md  vcpkg.json
include/libbdb/: error.hpp  libbdb.hpp  pipe.hpp  process.hpp  tracee.hpp
src/: CMakeLists.txt  error.cpp  libbdb.cpp  pipe.cpp  process.cpp  tracee.cpp
test/: CMakeLists.txt  tests.cpp
tools/: CMakeLists.txt  bdb.cpp
